crates/yamlito/tests/snapshots/parser__ast_snapshots@flow__sequence_simple.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/flow/sequence_simple.yml
---
Stream
  Document
    FlowSequence (3 entries)
      Scalar [plain] "one"
        decoded="one" value=String("one")
      Scalar [plain] "two"
        decoded="two" value=String("two")
      Scalar [plain] "three"
        decoded="three" value=String("three")
